2017-03-24 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.4.

2017-03-23 belangeo <belangeo@gmail.com>

    * Added `id` and `object` attributes to wxgui's object events.

2017-03-22 belangeo <belangeo@gmail.com>

    * Added setJackInputPortNames and setJackOutputPortNames methods to the
      Server object. This allow the user to rename jack input/output ports.

2017-03-21 belangeo <belangeo@gmail.com>

    * Updated portaudio interface to make it much more secure.

2017-03-20 belangeo <belangeo@gmail.com>

    * Added setIsJackTransportSlave method to Server object (it allows to
      start/stop the Server from jack transport).

2017-03-17 belangeo <belangeo@gmail.com>

    * Fixed GIL conflicts with portaudio, portmidi and jack library calls.

2017-03-11 belangeo <belangeo@gmail.com>

    * Added a setKeepLast method to TableRead object (will hold last value).

2017-03-10 belangeo <belangeo@gmail.com>

    * Added a setMode method to Selector object to switch between
      equal power mode and linear fade.

2017-03-06 belangeo <belangeo@gmail.com>

    * Fixed SfMarkerLooper and SfMarkerShuffler markers not accurate
      when soundfile sampling rate is not the same as the server's
      sampling rate.

2017-03-04 belangeo <belangeo@gmail.com>

    * Added a "title" argument to Server.gui() method.

2017-03-03 belangeo <belangeo@gmail.com>

    * MidiDispatcher can send sysex message with sendx() method.

2017-03-03 belangeo <belangeo@gmail.com>

    * Midi input refactoring. Events are now spreaded over the buffer size
	  according to the event's timestamp.

2017-02-19 belangeo <belangeo@gmail.com>

    * Added examples about multicore audio programming with pyo.

2017-02-14 belangeo <belangeo@gmail.com>

    * Fixed segfault in MidiListener callback function with python3.
    * Fixed string versus unicode in MidiDispatcher's getDeviceInfos method.

2017-02-13 belangeo <belangeo@gmail.com>

    * Final revision for version 0.8.3.
