@@ -1,3 +1,7 @@
+2017-03-26 belangeo <belangeo@gmail.com>
+
+    * Added setInOutDefaultDeviceFromHost(host) to the Server object.
+
 2017-03-24 belangeo <belangeo@gmail.com>
 
     * Upgraded version number to 0.8.4.
